[package]
name = "kitchensink"
version = "0.2.1"
description = "Puppet utilities for Rust."
readme = "README.md"
documentation = "http://ajroetker.github.io/rust-kitchensink/index.html"
repository = "https://github.com/ajroetker/rust-kitchensink"
license-file = "LICENSE"
keywords = ["puppet", "kitchensink", "utils", "utilities"]
authors = ["Andrew Roetker <andrew.roetker@puppetlabs.com>"]

[dependencies]
hyper = "0.8.*"
url = "0.5.*"

[target."cfg(windows)".dependencies]
winapi = "0.2.4"
winreg = "0.3.2"
shell32-sys = "0.1.1"
ole32-sys = "0.2.0"
kernel32-sys = "0.2.1"
advapi32-sys = "0.2.0"
userenv-sys = "0.2.0"

[dependencies.openssl]
version = "0.7"
features = ["tlsv1_2"]

[dependencies.openssl-verify]
version = "0.1"
