[package]
name = "kitchensink"
version = "0.4.2"
description = "Puppet utilities for Rust."
readme = "README.md"
documentation = "http://ajroetker.github.io/rust-kitchensink/index.html"
repository = "https://github.com/puppetlabs/rust-kitchensink"
license-file = "LICENSE"
keywords = ["puppet", "kitchensink", "utils", "utilities"]
authors = ["Andrew Roetker <andrew.roetker@puppetlabs.com>"]

[dependencies]
hyper = "0.10"
hyper-openssl = "0.2"
url = "1.4"
openssl-sys = "0.9"
log = "0.3"
rustc-serialize = "0.3"

[target."cfg(windows)".dependencies]
winapi = "0.2"
winreg = "0.4"
shell32-sys = "0.1"
ole32-sys = "0.2"
kernel32-sys = "0.2"
advapi32-sys = "0.2"
userenv-sys = "0.2"

[dependencies.openssl]
version = "0.9"
features = ["v102"]

[dev-dependencies]
tempdir = "0.3"